fix:dark mode toggle issue

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <meta property="og:title" content="Kritesh Timsina" />
+    <meta property="og:description" content="Kritesh Timsina's Personal Website" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kriteshtimsina.com.np" />
+    <meta property="og:image" content="/thumbnail.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kritesh Timsina</title>
   </head>
