--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <meta property="og:title" content="Kritesh Timsina" />
-    <meta property="og:description" content="Kritesh Timsina's Personal Website" />
+    <meta
+      property="og:title"
+      content="Kritesh Timsina | Frontend Developer  "
+    />
+    <meta property="og:site_name" content="Kritesh" Timsina />
+    <meta property="og:url" content=https://kriteshtimsina.com.np>
+    <meta
+      property="og:description"
+      content="Kritesh Timsina's portfolio website"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kriteshtimsina.com.np" />
     <meta property="og:image" content="/thumbnail.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kritesh Timsina</title>
