--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:title"
       content="Kritesh Timsina | Frontend Developer  "
     />
-    <meta property="og:site_name" content="Kritesh" Timsina />
-    <meta property="og:url" content=https://kriteshtimsina.com.np>
+    <meta property="og:site_name" content="Kritesh Timsina" />
+    <meta property="og:url" content="https://kriteshtimsina.com.np/" />
     <meta
       property="og:description"
-      content="Kritesh Timsina's portfolio website"
+      content="A highly motivated and eager student of B.Sc CSIT 8th semester with a
+      passion for learning new technologies."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/thumbnail.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="/kritesh.jpg" />
+
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
     <title>Kritesh Timsina</title>
   </head>
   <body>
