--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
       passion for learning new technologies."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/kritesh.jpg" />
-
-    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+    <meta property="og:image" content="/thumbnail.jpg" />
     <title>Kritesh Timsina</title>
   </head>
   <body>
