fix thumbnail not loading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       passion for learning new technologies."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/thumbnail.jpg" />
+    <meta
+      property="og:image"
+      content="https://kriteshtimsina.com.np/assets/kritesh-057690bd.jpg"
+    />
     <title>Kritesh Timsina</title>
   </head>
   <body>
