add twitter meta

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       property="og:image"
       content="https://kriteshtimsina.com.np/assets/kritesh-057690bd.jpg"
     />
+    <meta
+      property="twitter:image"
+      content="https://kriteshtimsina.com.np/assets/kritesh-057690bd.jpg"
+    />
     <title>Kritesh Timsina</title>
   </head>
   <body>
