feat: update resume

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta property="og:url" content="https://kriteshtimsina.com.np/" />
     <meta
       property="og:description"
-      content="A highly motivated and eager student of B.Sc CSIT 8th semester with a
-      passion for learning new technologies."
+      content="A highly motivated computer science enthusiast with a passion for problem-solving and software development."
     />
     <meta property="og:type" content="website" />
     <meta
